<resources>
    <string name="app_name">Yun Life</string>
    <string name="Dashboard">M</string>
    <string name="Tracker">Tracker</string>
    <string name="prompt_Welcome_Message">Tracker</string>
    <!-- Welcome Page -->
    <string name="lets_get_started">Lets Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="Welcome_page_Message">We just need to ask you a few quick questions so we can calculate your recommended daily calories and help you achieve your goals </string>
    <string name="setNewGoal_page_Message">Its never too late to change the goal !! </string>

    <!-- Goal Page -->
    <string name="whatIsYourGoal">What is your goal ?</string>
    <string name="weightLossOption">To lose weight</string>
    <string name="weightMaintainOption">To maintain weight</string>
    <string name="weightGainOption">To gain weight </string>
    <string name="buttonNext">Next</string>
    <string name="buttonPrevious">Previous</string>

    <!--Activity Level Page -->
    <string name="whatIsYourActivityLevel">How active are you ?</string>
    <string name="ActivityNotVeryActive">NOT VERY ACTIVE - Spend most of the day sitting, minimum movement.</string>
    <string name="ActivityLightlyActive">LIGHTLY ACTIVE - Spend a good part of the day on your feet (eg. teacher , salesperson)</string>
    <string name="ActivityActive">ACTIVE -Spend a good part of the day doing some physical activity( eg. food server , postal carrier) </string>
    <string name="ActivityVeryActive">VERY ACTIVE- Spend most of the day doing heavy physical activity (eg. warehouse worker , carpenter )</string>
    <string name="NotVeryActiveDesc">Spend most of the day sitting (eg. bank , teller , desk job)</string>
    <string name="LightlyActiveDesc">Spend a good part of the day on your feet (eg. teacher , salesperson)</string>
    <string name="ActiveDesc">Spend a good part of the day doing some physical activity( eg. food server , postal carrier)</string>
    <string name="VeryActiveDesc">Spend most of the day doing heavy physical activity (eg. warehouse worker , carpenter )</string>

    <!-- User Info Page -->
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_height">Height (cm)</string>
    <string name="prompt_weight">Weight (kg)</string>
    <string name="prompt_goal">Daily Workout Calorie Goal(Enter 1-999)</string>
    <string name="prompt_Time_goal">Time (Minutes)</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_firstname">First Name</string>
    <!-- Uesr Calculation Page -->
    <string name="almoast_There">Almost There \n\n

    As per your goals , the recommended intake values are </string>

    <string name="sports_Goal_Message">Please enter the calories you aim to burn via physical activities.</string>
    <string name="sports_behaviour_Recommnedation_text">You seem to be a fan of the below sports , enjoy either of the activites to achieve your daily goal</string>
    <string name="sports_Time_Goal_Message">Please enter the time you can allocate for physical activity.</string>


    <string name="running_Acknowledgement">Great Run  \n\n

    The details of your run are </string>
    <string name="lets_Start">Lets Start</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_facilities">Map</string>
    <string name="title_activity_facilities_with__maps">Facilities_with_Maps</string>
    <string name="title_activity_sports_coach">sportsCoach</string>
    <string name="recommend">Recommend Me</string>

</resources>
