<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sportsCoach">

    <Button
        android:id="@+id/btnBackToExerciseHome"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageViewUserGoalSuccessImage"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/clock" />


    <TextView
        android:id="@+id/textViewforCoach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewUserGoalSuccessImage"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:text="@string/sports_Time_Goal_Message"
        android:textSize="25dp"
        android:textStyle="bold" />




    <LinearLayout
        android:id="@+id/linearForCalorieGoal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewforCoach"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">




        <android.support.design.widget.TextInputLayout
            android:id="@+id/calorieBurnGoal"
            android:layout_width="match_parent"
            android:layout_below="@+id/heighttext"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/TimeGoalByUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/weighttext"
                android:hint="@string/prompt_Time_goal"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/dob"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/calorieUnitForSports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:inputType="numberDecimal"
            android:text="Calories"
            android:textColor="#171B18"
            android:textSize="20dp" />

    </LinearLayout>

    <Button
        android:id="@+id/recommend_me_now_new_Sportss"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearForCalorieGoal"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/transparent_bg_bordered_button"
        android:text="@string/recommend"
        android:textColor="#FFFFFF" />


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>